@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2013-2015 Simple Injector Contributors
+ * Copyright (c) 2013-2016 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -38,7 +38,8 @@ namespace SimpleInjector
         internal static string ContainerCanNotBeChangedAfterUse(string stackTrace)
         {
             string message = string.Format(CultureInfo.InvariantCulture, 
-                "The container can't be changed after the first call to {0}, {1} and {2}.",
+                "The container can't be changed after the first call to {0}, {1} and {2}. " +
+                "Please see https://simpleinjector.org/locked to understand why the container is locked.",
                 nameof(Container.GetInstance),
                 nameof(Container.GetAllInstances),
                 nameof(Container.Verify));
