@@ -6,6 +6,7 @@ Version 3.1.3 (v3.1.3 RTM)
 	Improvements/Changes:
 		-[Web] SimpleInjector.Integration.Web NuGet package now references the Microsoft.Web.Infrastructure
 		 NuGet package instead of the Microsoft.Web.Infrastructure.dll from the GAC. (fixes #170)
+		-[Core] URL to documentation added to "container can't be changed" exception message. (fixes #177).
 
 	Bug fixes:
 
